--- a/src/App.css
+++ b/src/App.css
@@ -48,22 +48,10 @@
 
 
 
-@keyframes gradientFlow {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
 body {
-  background: linear-gradient(-45deg, #667eea, #764ba2, #89f7fe, #66a6ff);
-  background-size: 400% 400%;
-  animation: gradientFlow 15s ease infinite;
+  background-image: url('../public/img/5.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
