--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
 
 
 
-body {
+.login-bg {
   background-image: url('../public/img/5.jpg');
   background-size: cover;
   background-position: center;
